k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actividad3
  labels:
    name: actividad3
    purpose: "actividad3-contenedores-unir"
